new project and service worker setup

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "workbox-range-requests": "^6.4.2",
     "workbox-routing": "^6.4.2",
     "workbox-strategies": "^6.4.2",
-    "workbox-streams": "^6.4.2"
+    "workbox-streams": "^6.4.2",
+    "classnames": "^2.3.2",
+    "react-merge-refs": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,5 +53,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "tailwindcss": "^3.3.2"
   }
 }
