--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^17.0.10",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-merge-refs": "^2.0.2",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.4",
@@ -26,9 +29,7 @@
     "workbox-range-requests": "^6.4.2",
     "workbox-routing": "^6.4.2",
     "workbox-strategies": "^6.4.2",
-    "workbox-streams": "^6.4.2",
-    "classnames": "^2.3.2",
-    "react-merge-refs": "^2.0.2"
+    "workbox-streams": "^6.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
