--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-merge-refs": "^2.0.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.4.2",
